# unity-py-sim

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  CROSS_MACHINE.md  PROMPT.md  SHELVED.md  SUCCESS.md  activity.md  fix_plan.md  plan.md  public_api.md  pyproject.toml  ralph.config.json  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: home_machine.yml  test.yml
.ralph/: current_task.json  lesson_injections.jsonl  memories.md  observations.jsonl  playtest_log.jsonl
.ralph/manager_reviews/: review_iter_000.md
data/corpus/: corpus_index.json
data/exports/: angry_birds_scene.json  angry_birds_setup.cs  pacman_scene.json  pacman_setup.cs
data/idioms/: README.md
data/lessons/: _feel_journal_template.md  breakout_deploy.md  breakout_feel_journal.md  coplay_generator_gaps.md  flappy_bird_deploy.md  flappy_bird_feel_journal.md  gotchas.md  pacman_v2_deploy.md  patterns.md  playtest_errors.jsonl  space_invaders_feel_journal.md  testing.md  translator_compilability.md  unity6_audio_module.md
data/manifests/: angry_birds.json  breakout.json
data/mappings/: angry_birds_mapping.json  breakout_mapping.json  flappy_bird_mapping.json  pacman_mapping.json  space_invaders_mapping.json
data/metrics/: README.md  asp7_status.json  baseline.json  compilation_baseline.json  coplay_parity_cases.json  dashboard.md  parity_matrix.json  parity_matrix.md  parity_pass_rates.json  pipeline_e2e.json  roundtrip_baseline.json
examples/angry_birds/: run_angry_birds.py
examples/breakout/: run_breakout.py
examples/pacman/: run_pacman.py
src/: pipeline.py
stubs/: GlobalUsings.cs  SystemCollections.cs  SystemLinq.cs  UnityEngine.InputSystem.cs  UnityEngine.cs
tests/: conftest.py
tools/: aggregate_coplay_parity_results.py  behavioral_gate.py  build_corpus.py  build_idiom_catalog.py  gate_pipeline.py  gen_coplay.py  gen_flappy_coplay.py  home_machine_deploy.ps1  home_machine_playmode_test.cs.j2  home_machine_playtest.cs  home_machine_run_tests.ps1  measure_parity_pass_rates.py  parity_scaffold.py  pipeline.py  playtest.py  postprocess_cs.py  render_dashboard.py  render_parity_matrix.py  run_compilation_gate.py  run_roundtrip_baseline.py  scaffold_coplay_parity_runner.py  score_baseline.py  screenshot_flappy.py  screenshot_game.py  translate_snippet.py
(+644 files in other folders)
