[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-py-sim"
version = "0.1.0"
description = "Python simulation of Unity game engine for C#<->Python translation"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "pymunk>=6.6.0",
    "numpy>=1.26.0",
    "pyrr>=0.10.3",
    "tree-sitter>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.350",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: tests that re-run a heavy suite (e.g. the parity harness end-to-end). Skipped by default; opt-in via `-m slow` or `-m ''`.",
]
addopts = "-m 'not slow'"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
extend-exclude = ["data/generated", "examples", ".venv", "stubs"]

[tool.ruff.lint]
ignore = [
    "F841",  # unused-variable — stylistic, deferred
    "E741",  # ambiguous-variable-name — stylistic, deferred
]

[tool.ruff.lint.per-file-ignores]
"tools/*" = ["E402"]  # sys.path.insert before imports is the legitimate pattern
"tests/*" = ["E402"]
"src/engine/core.py" = ["F821"]  # forward references for circular-import-avoidance
"src/engine/physics/physics_manager.py" = ["F821"]
